--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -5,7 +5,90 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --paddingContainer: 100px 0;
+  --title: #001a49;
+}
 
 body {
   font-family: "Poppins", sans-serif;
+  font-size: 20px;
 }
+
+/* ----------------- Header -------------------- */
+.header {
+  width: 100%;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 800px;
+  position: relative;
+  color: #fff;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%),
+    url(./Imgs/computer.jpg);
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+  z-index: -1;
+}
+
+.nav {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navlinkContainer {
+  display: flex;
+  gap: 2rem;
+}
+.navItem {
+  list-style: none;
+}
+.navLink {
+  text-decoration: none;
+  color: #fff;
+}
+.navMenu {
+  display: none;
+}
+
+#navClose {
+  display: none;
+}
+.container {
+  padding: var(--paddingContainer);
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.paragraph {
+  margin-bottom: 40px;
+}
+
+.startNow {
+  color: #fff;
+  text-decoration: none;
+  background-color: #2091f9;
+  padding: 13px 30px;
+  border-radius: 32px;
+}
+
+/* ----------------- Body Section 1 -------------------- */
