--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -6,13 +6,12 @@
   box-sizing: border-box;
 }
 :root {
-  --paddingContainer: 100px 0;
   --title: #001a49;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 /* ----------------- Header -------------------- */
@@ -68,7 +67,7 @@ body {
   display: none;
 }
 .container {
-  padding: var(--paddingContainer);
+  padding: 100px 20px;
   max-width: 800px;
   text-align: center;
   margin: 0 auto;
@@ -95,11 +94,13 @@ body {
 
 .aboutContainer {
   text-align: center;
-  padding: 100px 0;
+  padding: 100px 20px;
 }
 
-.aboutContainerTitle {
+.sectionTitle {
   color: var(--title);
+  font-size: 2rem;
+  margin-bottom: 25px;
 }
 
 .aboutParagraph {
@@ -133,21 +134,20 @@ body {
     radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
   background-size: 20px 20px;
   background-position: 0 0, 10px 10px;
-  padding: 100px 0;
+  padding: 100px 20px;
 }
 .knowledgeContainer {
   max-width: 900px;
   display: flex;
 
   margin: 0 auto;
-  gap: 20px;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
 }
-.knowledgeSubTitle {
-  color: var(--title);
-  margin-bottom: 20px;
-}
+
 .knowledgeParagraph {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .knowledgePicture {
   max-width: 400px;
@@ -157,3 +157,5 @@ body {
   width: 100%;
   border-radius: 20px;
 }
+
+/* ----------------- Prices -------------------- */
