--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -285,3 +285,67 @@ body {
 }
 
 /* ----------------- Questions -------------------- */
+
+.Question {
+  padding: 100px 20px;
+  text-align: center;
+  max-width: 951px;
+  margin: 0 auto;
+}
+
+.questionContainer {
+  display: grid;
+  gap: 2em;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.questionPadding {
+  padding: 0;
+  transition: padding 0.2s;
+  border: 1px solid #5454d4;
+  border-radius: 6px;
+}
+
+.questionPaddingAdd {
+  padding-bottom: 20px;
+}
+
+.questionAnswer {
+  padding: 0 30px 0;
+  overflow: hidden;
+}
+
+.questionTitle {
+  display: flex;
+  font-size: 20px;
+  padding: 30px 0 30px;
+  cursor: pointer;
+  color: var(--title);
+  justify-content: space-between;
+}
+.questionArrow {
+  border-radius: 50%;
+  background-color: var(--title);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-left: 10px;
+  transition: transform 0.3s;
+}
+.questionArrowRotate {
+  transform: rotate(180deg);
+}
+
+#questionIMG {
+  color: #fff;
+  display: block;
+}
+
+.questionShow {
+  text-align: left;
+  height: 0;
+}
