--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -64,7 +64,7 @@ body {
   text-decoration: none;
   color: #fff;
 }
-.navMenu {
+.navMenuContainer {
   display: none;
 }
 
@@ -429,4 +429,40 @@ body {
 }
 #icon {
   font-size: 20px;
+}
+
+/* ----------------- Media Queries -------------------- */
+
+@media screen and (max-width: 800px) {
+  .navMenuContainer {
+    display: block;
+    font-size: 30px;
+  }
+  .navlinkContainer {
+    position: fixed;
+    background-color: #000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 20;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.7s opacity;
+  }
+  .navlinkContainerShow {
+    opacity: 1;
+    pointer-events: unset;
+  }
+  #navClose {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    font-size: 30px;
+  }
 }
