--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -13,6 +13,9 @@
   --colorCTA: #5454d4;
   --colorItems: #696871;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Poppins", sans-serif;
@@ -321,16 +324,18 @@ body {
   cursor: pointer;
   color: var(--title);
   justify-content: space-between;
+  align-items: center;
+  text-align: start;
 }
 .questionArrow {
   border-radius: 50%;
   background-color: var(--title);
-  width: 25px;
-  height: 25px;
+  min-width: 25px;
+  min-height: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  align-self: flex-end;
+
   margin-left: 10px;
   transition: transform 0.3s;
 }
@@ -424,6 +429,9 @@ body {
   display: flex;
   gap: 10px;
 }
+.copyRights {
+  text-align: center;
+}
 
 .iconsContainer {
   display: flex;
@@ -441,11 +449,15 @@ body {
     display: block;
     font-size: 30px;
   }
+  .container {
+    padding-top: 75px;
+  }
+
   .navlinkContainer {
     position: fixed;
     background-color: #000;
     top: 0;
-    left: 0;
+    left: 800px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -453,14 +465,15 @@ body {
     justify-content: space-evenly;
     align-items: center;
     z-index: 20;
-    opacity: 0;
     pointer-events: none;
-    transition: 0.7s opacity;
+
+    transition: 0.2s left;
   }
   .navlinkContainerShow {
-    opacity: 1;
+    left: 0;
     pointer-events: unset;
   }
+
   #navClose {
     display: block;
     position: absolute;
@@ -469,7 +482,7 @@ body {
     font-size: 30px;
   }
   .title {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .knowledgeContainer {
     flex-direction: column-reverse;
@@ -477,7 +490,10 @@ body {
     text-align: center;
   }
   .priceTable {
-    flex-direction: column;
+    max-width: 500px;
+  }
+  .priceTable {
+    flex-wrap: wrap;
   }
   .testimonyContainer {
     grid-template-columns: 30px 1fr 30px;
@@ -512,5 +528,40 @@ body {
   }
   .inputNewsletter {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .title {
+    font-size: 1.8rem;
+  }
+  .paragraph {
+    font-size: 0.8rem;
+  }
+  .sectionTitle {
+    font-size: 1.5rem;
+  }
+  .testimonyCourse {
+    font-size: 1.2rem;
+  }
+  .testimonyReview {
+    font-size: 15px;
+    text-align: justify;
+  }
+  .testimonyIMG {
+    width: 150px;
+    height: 150px;
+  }
+  .links {
+    justify-content: space-between;
+    width: 100%;
+    gap: 4px;
+  }
+  .LinksContainer {
+    align-items: flex-start;
+    gap: 0;
+  }
+  .subscribeForm {
+    flex-direction: column;
   }
 }
