--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -98,6 +98,25 @@ body {
   border-radius: 32px;
 }
 
+.btnUpContainer {
+  width: 40px;
+  height: 40px;
+  background-color: #2091f9;
+  border-radius: 8px;
+  display: grid;
+  place-content: center;
+  font-size: 50px;
+  box-shadow: 0 0 5px #2091f9;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  opacity: 0;
+  transition: 0.5s opacity;
+}
+.btnUpContainerActive {
+  opacity: 1;
+}
+
 /* ----------------- About -------------------- */
 
 .aboutContainer {
@@ -509,6 +528,11 @@ body {
     flex-direction: column;
     text-align: center;
   }
+  .testimonyIMG {
+    width: 225px;
+    height: 225px;
+  }
+
   .footerHead {
     flex-direction: column;
     text-align: center;
@@ -563,5 +587,9 @@ body {
   }
   .subscribeForm {
     flex-direction: column;
+  }
+  .btnUpContainer {
+    bottom: 10px;
+    right: 10px;
   }
 }
