--- a/LadingPageOne/style.css
+++ b/LadingPageOne/style.css
@@ -40,7 +40,7 @@ body {
   width: 100%;
   height: 100%;
   background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%),
-    url(./Imgs/computer.jpg);
+    url(./Imgs/Header.jpg);
   background-size: cover;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
   z-index: -1;
